# Image_Processor

tasks/image_processor/: CMakeLists.txt
tasks/image_processor/Headers/: Controller.h  Exceptions.h  Image.h  Info.h  Pixel.h
tasks/image_processor/Headers/Filters/: Crop.h  EdgeDetection.h  Filter.h  GaussianBlur.h  Grayscale.h  Hexagones.h  MatrixFilter.h  Negative.h  Sharpening.h
tasks/image_processor/Headers/IO/: ReadingBMP.h  WritingBMP.h
tasks/image_processor/Sources/: Controller.cpp  Exceptions.cpp  Image.cpp  Info.cpp  Pixel.cpp  image_processor.cpp
tasks/image_processor/Sources/Filters/: Crop.cpp  EdgeDetection.cpp  Filter.cpp  GaussianBlur.cpp  Grayscale.cpp  Hexagones.cpp  MatrixFilter.cpp  Negative.cpp  Sharpening.cpp
tasks/image_processor/Sources/IO/: ReadingBMP.cpp  WritingBMP.cpp
tasks/image_processor/Tests/: tests.cpp
